Fix case-docket sort button alignment
Jira ticket: CAMS-222

--- a/user-interface/src/case-detail/panels/CaseDetailCourtDocket.scss
+++ b/user-interface/src/case-detail/panels/CaseDetailCourtDocket.scss
@@ -22,6 +22,12 @@
       font-weight: bold;
     }
   }
+  .sort {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    text-align: end;
+  }
   .sort-button {
     overflow: hidden;
     width: 11rem;
@@ -32,4 +38,5 @@
     width: 2rem;
     vertical-align: middle;
   }
+
 }
